// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MeasureInformation component should render the component with a blank measure name 1`] = `
<div
  data-testid="measureNameEdit"
  tw="px-4"
>
  <span>
    Measure:
  </span>
  <div
    data-testid="outer-area"
  >
    <span
      data-testid="inline-editor"
    >
      <div
        data-testid="inline-view"
      >
        <span
          class="sc-bdvvtL"
          data-testid="inline-view-span"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-pen-alt fa-w-16 "
            data-icon="pen-alt"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M497.94 74.17l-60.11-60.11c-18.75-18.75-49.16-18.75-67.91 0l-56.55 56.55 128.02 128.02 56.55-56.55c18.75-18.75 18.75-49.15 0-67.91zm-246.8-20.53c-15.62-15.62-40.94-15.62-56.56 0L75.8 172.43c-6.25 6.25-6.25 16.38 0 22.62l22.63 22.63c6.25 6.25 16.38 6.25 22.63 0l101.82-101.82 22.63 22.62L93.95 290.03A327.038 327.038 0 0 0 .17 485.11l-.03.23c-1.7 15.28 11.21 28.2 26.49 26.51a327.02 327.02 0 0 0 195.34-93.8l196.79-196.79-82.77-82.77-84.85-84.85z"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`MeasureInformation component should render the component with measure's name populated 1`] = `
<div
  data-testid="measureNameEdit"
  tw="px-4"
>
  <span>
    Measure:
  </span>
  <div
    data-testid="outer-area"
  >
    <span
      data-testid="inline-editor"
    >
      <div
        data-testid="inline-view"
      >
        <span
          class="sc-bdvvtL"
          data-testid="inline-view-span"
        >
          the measure for testing
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-pen-alt fa-w-16 "
            data-icon="pen-alt"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M497.94 74.17l-60.11-60.11c-18.75-18.75-49.16-18.75-67.91 0l-56.55 56.55 128.02 128.02 56.55-56.55c18.75-18.75 18.75-49.15 0-67.91zm-246.8-20.53c-15.62-15.62-40.94-15.62-56.56 0L75.8 172.43c-6.25 6.25-6.25 16.38 0 22.62l22.63 22.63c6.25 6.25 16.38 6.25 22.63 0l101.82-101.82 22.63 22.62L93.95 290.03A327.038 327.038 0 0 0 .17 485.11l-.03.23c-1.7 15.28 11.21 28.2 26.49 26.51a327.02 327.02 0 0 0 195.34-93.8l196.79-196.79-82.77-82.77-84.85-84.85z"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
    </span>
  </div>
</div>
`;
